# django-actions-ci

./: manage.py  pyproject.toml
.github/workflows/: ci.yml
corepools/: asgi.py  pytest.ini  settings.py  urls.py  wsgi.py
corepools/.github/workflows/: ci.yml
pools/: admin.py  models.py  urls.py  views.py
pools/migrations/: 0001_initial.py
pools/static/pools/: style.css
pools/templates/pools/: detail.html  index.html  results.html
pools/test/: test_models_and_views.py
templates/admin/: base_site.html
