[tool.poetry]
name = "django-pools"
version = "0.1.0"
description = "Django Pools Project"
authors = ["jose-robertooliveira <negroafrolife@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
pytest-django = "^4.8.0"
pytest = "^8.2.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.0.0"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "corepools.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "corepools.settings"
python_files = "tests.py test_*.py *_tests.py"
